{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 102,
  "lineage": "69dbc77d-ca62-6a4f-cd24-8ee4184b934c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:internet-gateway/igw-0f90f7051aa7e6afd",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-002427d5be38383d7"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-002427d5be38383d7"
                ]
              }
            ],
            "id": "igw-0f90f7051aa7e6afd",
            "internet_gateway_id": "igw-0f90f7051aa7e6afd",
            "owner_id": "248189943700",
            "tags": {
              "Name": "Default gateway"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-06289d5ecb2c8668a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "eu-west-3a"
                ]
              },
              {
                "name": "cidr-block",
                "values": [
                  "172.31.0.0/20"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-002427d5be38383d7"
                ]
              }
            ],
            "id": "subnet-06289d5ecb2c8668a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-030a9c008a57ac5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "eu-west-3b"
                ]
              },
              {
                "name": "cidr-block",
                "values": [
                  "172.31.16.0/20"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-002427d5be38383d7"
                ]
              }
            ],
            "id": "subnet-030a9c008a57ac5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:vpc/vpc-002427d5be38383d7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-057161347787c24d5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08929275b8ac13244",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002427d5be38383d7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028b84fc0a09defeb",
            "owner_id": "248189943700",
            "tags": {
              "Name": "Default vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09be70e689bddcef5",
            "arn": "arn:aws:ec2:eu-west-3:248189943700:instance/i-055eb683e39729f1e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055eb683e39729f1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c93359003847890f",
            "private_dns": "ip-172-31-1-109.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.109",
            "public_dns": "ec2-13-38-88-240.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.88.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06dac65d5add12efe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh_tg3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06289d5ecb2c8668a",
            "tags": {
              "Name": "WordPress-dev-mysql-FJGL"
            },
            "tags_all": {
              "Name": "WordPress-dev-mysql-FJGL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dabfbdb89a9cc1a9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_tg3",
            "data.aws_subnet.subnet_a",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:security-group/sg-05a703ce08bf36310",
            "description": "Allow MySQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a703ce08bf36310",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_mysql_new",
            "name_prefix": "",
            "owner_id": "248189943700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow MySQL"
            },
            "tags_all": {
              "Name": "Allow MySQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-002427d5be38383d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_tg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:security-group/sg-0dabfbdb89a9cc1a9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dabfbdb89a9cc1a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_tg3",
            "name_prefix": "",
            "owner_id": "248189943700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH-TG3"
            },
            "tags_all": {
              "Name": "Allow SSH-TG3"
            },
            "timeouts": null,
            "vpc_id": "vpc-002427d5be38383d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}